--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mapbox-gl": "^2.13.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3"
+    "eslint-config-next": "13.2.3",
+    "postcss": "^8.4.21",
+    "tailwind-styled-components": "^2.2.0",
+    "tailwindcss": "^3.2.7"
   }
 }
