--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.5.2",
     "mapbox-gl": "^2.13.0",
     "next": "13.2.3",
     "react": "18.2.0",
