--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^10.5.2",
     "mapbox-gl": "^2.13.0",
-    "next": "13.2.3",
+    "next": "^14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
